@startuml

title __LOGIN.APP's Class Diagram__\n

  namespace com.example {
    class com.example.CommonUtil {
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.BuildConfig {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.Course {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.CourseFragment {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.FindPWActivity {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.Lecture {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.LectureListAdapter {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.LoginActivity {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.MainActivity {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.Notice {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.NoticeListAdapter {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.ScheduleFragment {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.SignInActivity {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.StatisticFragment {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.Statistics {
      }
    }
  }
  

  namespace com.example {
    namespace login {
      class com.example.login.StatisticsCourseListAdapter {
      }
    }
  }
  

  com.example.login.CourseFragment -up-|> androidx.fragment.app.Fragment
  com.example.login.CourseFragment o-- com.example.login.Course : course
  com.example.login.CourseFragment o-- com.example.login.LectureListAdapter : adapter
  com.example.login.FindPWActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login.LectureListAdapter -up-|> android.widget.BaseAdapter
  com.example.login.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login.MainActivity o-- com.example.login.NoticeListAdapter : adpater
  com.example.login.NoticeListAdapter -up-|> android.widget.BaseAdapter
  com.example.login.ScheduleFragment -up-|> androidx.fragment.app.Fragment
  com.example.login.SignInActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login.StatisticFragment -up-|> androidx.fragment.app.Fragment
  com.example.login.StatisticFragment o-- com.example.login.Statistics : statistics
  com.example.login.StatisticFragment o-- com.example.login.StatisticsCourseListAdapter : adapter
  com.example.login.StatisticsCourseListAdapter -up-|> android.widget.BaseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
